Fixes scrollbar styles in keyword suggestions dropdown [fixes #157031104]

--- a/app/assets/stylesheets/spree/frontend/_helpers.sass
+++ b/app/assets/stylesheets/spree/frontend/_helpers.sass
@@ -44,12 +44,12 @@
 .visible-scroll
   &::-webkit-scrollbar
     -webkit-appearance: none
-    width: 7px
+    width: 10px
 
   &::-webkit-scrollbar-thumb
     -webkit-box-shadow: 0 0 1px #3f3f49
     background-color: #3f3f49
-    border-radius: 4px
+    border-radius: 0
 
   &:hover::-webkit-scrollbar-thumb
     background-color: #3f3f49
